Display all excuses

--- a/client/views/excuses/excuses.html
+++ b/client/views/excuses/excuses.html
@@ -1,9 +1,8 @@
 <template name="Excuses">
-<head></head>
-	<div class="taskRow small-12 large-4 columns" id="doneCol">
+  <div class="taskRow small-12 large-4 columns" id="doneCol">
       <h1 id="doneHeader" class="centered">Excuses</h1>
       {{#each radExcuses}}
-        {{> s}}
+        {{> Excuse}}
       {{/each}}
-	</div>
+  </div>
 </template>
